# nota-serde-core

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  manifest  rust-toolchain.toml
.beads/: config.yaml  metadata.json
src/: de.rs  error.rs  lexer.rs  lib.rs  ser.rs
tests/: capitalization.rs  edge_cases.rs  example_config.rs  nexus_mode.rs
